--- a/index.html
+++ b/index.html
@@ -67,10 +67,15 @@
     #chart-container, #history-container {
       width: 100%; max-width: 300px; margin: auto;
     }
-    #chart-container {
-      margin: 30px auto;
-      padding: 20px 0;
-      position: relative;
+    #category-container {
+      width: 300px;
+    }
+    .chart-flex {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      align-items: center;
     }
     .actions {
       display: flex; flex-wrap: wrap; justify-content: center; gap: 10px;
@@ -120,18 +125,37 @@
   </header>
   <section class="card">
     <div class="actions">
+      <select id="categorySelect">
+        <option value="שכר דירה">שכר דירה</option>
+        <option value="חשבונות">חשבונות</option>
+        <option value="דלק">דלק</option>
+        <option value="גז (גפ״מ)">גז (גפ״מ)</option>
+        <option value="אוכל">אוכל</option>
+        <option value="בילויים">בילויים</option>
+        <option value="ביגוד">ביגוד</option>
+        <option value="פינוקים">פינוקים</option>
+        <option value="כללי">כללי</option>
+      </select>
       <input type="text" id="expenseDescInput" placeholder="תיאור הוצאה">
       <input type="number" id="expenseInput" placeholder="סכום הוצאה" min="0">
       <button id="addExpenseBtn">➕ הוסף הוצאה</button>
     </div>
     <hr style="border: none; height: 1px; background-color: var(--text); opacity: 0.1; margin: 20px 0;">
-    <div id="chart-container">
-      <canvas id="expenseChart"></canvas>
-      <p id="statusText">0 מתוך 0 ₪</p>
+    <div class="chart-flex">
+      <div id="chart-container">
+        <p id="capitalText">ההון שלך הוא: 0 ₪</p>
+        <canvas id="expenseChart"></canvas>
+        <p id="statusText">0 מתוך 0 ₪</p>
+      </div>
+      <div id="category-container">
+        <canvas id="categoryChart"></canvas>
+      </div>
     </div>
     <hr style="border: none; height: 1px; background-color: var(--text); opacity: 0.1; margin: 20px 0;">
     <!-- budget and general actions -->
     <div class="actions">
+      <input type="number" id="capitalInput" placeholder="הגדר הון התחלתי" min="0">
+      <button id="setCapitalBtn">הגדר הון</button>
       <input type="number" id="maxInput" placeholder="הגדר מקסימום" min="0">
       <button id="setMaxBtn">🧾 הגדר תקציב</button>
       <button id="resetBtn">🔄 איפוס</button>
@@ -150,10 +174,10 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
     // data & storage
-    let maxBudget = 0, current = 0;
+    let maxBudget = 0, current = 0, capital = 0;
     let transactions = [];
     function saveData() {
-      localStorage.setItem('budgetData', JSON.stringify({maxBudget, transactions}));
+      localStorage.setItem('budgetData', JSON.stringify({maxBudget, transactions, capital}));
     }
     function loadData() {
       const saved = JSON.parse(localStorage.getItem('budgetData'));
@@ -161,11 +185,13 @@
         maxBudget = saved.maxBudget;
         transactions = saved.transactions;
         current = transactions.filter(t=>t.type==='expense').reduce((sum,t)=>sum+t.amount,0);
+        if(saved.capital !== undefined) capital = saved.capital;
       }
     }
     // setup charts
     const expenseCtx = document.getElementById('expenseChart').getContext('2d');
     const historyCtx = document.getElementById('historyChart').getContext('2d');
+    const categoryCtx = document.getElementById('categoryChart').getContext('2d');
     const data = { datasets:[{data:[0,0], backgroundColor:['var(--accent)', '#424242'], borderWidth:0}]};
     const options = { cutout:'70%', responsive:true, animation:{duration:800,easing:'easeOutQuart'}, plugins:{legend:{display:false}, tooltip:{enabled:true}} };
     const centerTextPlugin = { 
@@ -184,8 +210,12 @@
     };
     const expenseChart = new Chart(expenseCtx,{type:'doughnut',data:data,options:options,plugins:[centerTextPlugin]});
     const historyChart = new Chart(historyCtx,{type:'line',data:{labels:[],datasets:[{label:'הוצאות',data:[],borderColor:getComputedStyle(document.documentElement).getPropertyValue('--accent'),backgroundColor:'transparent'}]},options:{responsive:true}});
+    const categories = ['שכר דירה','חשבונות','דלק','גז (גפ״מ)','אוכל','בילויים','ביגוד','פינוקים','כללי'];
+    const categoryData = { labels: categories, datasets:[{label:'הוצאות לפי קטגוריה',data:categories.map(()=>0),backgroundColor:categories.map(()=>getComputedStyle(document.documentElement).getPropertyValue('--accent'))}]};
+    const categoryChart = new Chart(categoryCtx,{type:'bar',data:categoryData,options:{responsive:true,scales:{y:{beginAtZero:true}}}});
     // UI elements
     const transactionsList = document.getElementById('transactions');
+    const categorySelect = document.getElementById('categorySelect');
     function showToast(msg) {
       const toast = document.getElementById('toast');
       toast.textContent = msg;
@@ -195,6 +225,7 @@
       }, 3000);
     }
     function updateStatusText() { document.getElementById('statusText').textContent=`${current} מתוך ${maxBudget} ₪`; }
+    function updateCapitalText() { document.getElementById('capitalText').textContent=`ההון שלך הוא: ${capital} ₪`; }
     function updateTransactionsList() {
       transactionsList.innerHTML='';
       transactions.slice(-5).reverse().forEach(t=>{
@@ -206,11 +237,19 @@
     }
     function updateExpenseChart() { const p=Math.min(Math.max(current/maxBudget,0),1); const red=Math.floor(p*255),green=Math.floor((1-p)*255); expenseChart.data.datasets[0].data=[current,Math.max(maxBudget-current,0)]; expenseChart.data.datasets[0].backgroundColor[0]=`rgb(${red},${green},0)`; expenseChart.update(); }
     function updateHistoryChart() { const filtered=transactions.filter(t=>t.type==='expense'); const daily={}; filtered.forEach(t=>{ daily[t.date]=(daily[t.date]||0)+t.amount; }); const dates=Object.keys(daily).sort(); historyChart.data.labels=dates; historyChart.data.datasets[0].data=dates.map(d=>daily[d]); historyChart.update(); }
-    function updateAll() { updateStatusText(); updateExpenseChart(); updateTransactionsList(); updateHistoryChart(); }
+    function updateCategoryChart() {
+      const sums = {};
+      categories.forEach(c=>sums[c]=0);
+      transactions.filter(t=>t.type==='expense').forEach(t=>{ sums[t.category] = (sums[t.category]||0) + t.amount; });
+      categoryChart.data.datasets[0].data = categories.map(c=>sums[c]);
+      categoryChart.update();
+    }
+    function updateAll() { updateStatusText(); updateCapitalText(); updateExpenseChart(); updateTransactionsList(); updateHistoryChart(); updateCategoryChart(); }
     // events
     document.getElementById('setMaxBtn').addEventListener('click',()=>{ const val=+document.getElementById('maxInput').value; if(val>0){ maxBudget=val; current=0; transactions=[]; saveData(); updateAll(); showToast('תקציב הוגדר!'); }});
     document.getElementById('addExpenseBtn').addEventListener('click', () => {
       const desc = document.getElementById('expenseDescInput').value.trim();
+      const category = categorySelect.value;
       // Get current time in Israel timezone
       const now = new Date();
       // Format manually to avoid timezone issues
@@ -223,7 +262,7 @@
       const dateTime = `${year}-${month}-${day}T${hours}:${minutes}`;
       const val = +document.getElementById('expenseInput').value;
       if (desc && val > 0) {
-        const t = { type: 'expense', amount: val, desc, date: dateTime };
+        const t = { type: 'expense', amount: val, desc, date: dateTime, category };
         transactions.push(t);
         current += val;
         saveData();
@@ -241,6 +280,18 @@
       document.documentElement.classList.toggle('light-theme');
       // Update charts to reflect theme change
       updateAll();
+    });
+    document.getElementById('setCapitalBtn').addEventListener('click', () => {
+      const val = +document.getElementById('capitalInput').value;
+      if(!isNaN(val) && val >= 0) {
+        capital = val;
+        saveData();
+        updateCapitalText();
+        document.getElementById('capitalInput').value = '';
+        showToast('ההון התעדכן!');
+      } else {
+        showToast('אנא הזן ערך הון חוקי');
+      }
     });
     // Create backup & restore buttons and add them to the actions
     const actionsDiv = document.querySelector('.actions:last-of-type');
